<resources>
    <string name="app_name">McDonalds</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="rcontrasena">Repetir Contraseña</string>
    <string name="entrar">Entrar</string>
    <string name="correo">Correo Electrónico</string>
    <string name="registro"><u>Registro de usuario nuevo</u></string>
    <string name="aceptar">Aceptar</string>
    <string name="cancelar">Cancelar</string>
    <string name="miperfil">Mi Perfil</string>
    <string name="ppal">Promociones</string>
    <string name="dia">Menú del día:</string>
    <string name="clasifica">Clasificación</string>
    <string name="abierto">Open navigation drawer</string>
    <string name="cerrado">Close navigation drawer</string>
    <string name="infomcmenu1">- Un sándwich a elegir*
- Patatas fritas medianas, patatas Deluxe o ensalada.
- Una botella de 50 cl de agua Nestlé Aquarel, un refresco de 40 cl (Coca-Cola, Coca-Cola Zero, Coca-Cola Light, Sprite, Lipton Ice Tea, Trina Limón), </string>
    <string name="infomcmenu">Menú también disponible en tamaño grande, con bebida y patatas grandes. Por solo 60 céntimos más una cerveza Mahou de 30cl o una cerveza sin alcohol Mahou de 30cl.</string>
    <string name="mcmenufinal">*El sándwich puede variar dependiendo de la oferta de cada restaurante</string>
    <string name="infoensa1">- Una ensalada a elegir*- Una botella de 50 cl de agua Aquabona, un refresco de 40 cl (Coca-Cola, Coca-Cola Zero, Coca-Cola Light, Sprite, Lipton Ice Tea,</string>
    <string name="infomcensa">Trina Limón), una cerveza Mahou de 30cl o una cerveza sin alcohol Mahou de 30cl.</string>
    <string name="mcesafinal">*La ensalada puede variar dependiendo de la oferta de cada restaurante</string>
    <string name="infohappy1">- Un plato principal (McFish, Hamburguesa, Hamburguesa con queso, McNuggets, Chicken Burger Kids).
- Una guarnición a elegir (Patatas fritas pequeñas, Patatas Deluxe medianas, Happy Cherritos, Happy Zanahorias). - Una bebida a elegir (refresco de 25 cl, zumo Tropicana de naranja o manzana, </string>
    <string name="infohappy"> agua Nestlé Aquarel,…).- Un postre a elegir (mini McFlurry MMs, dos tipos de fruta, Danonino, Actimel).- ¡Y un juguete para disfrutar!</string>
    <string name="mchappyfinal">*El juguete puede variar dependiendo de la oferta de cada restaurante</string>
    <string name="infoextre">Si todo lo que cocina una abuela queda bueno, imagínate una hamburguesa.
Pan Rústico, salsa de tomate y chorizo.</string>
    <string name="mcextrefinal">*La Hamburguesa puede variar dependiendo de la oferta de cada restaurante</string>
    <string name="infoflurry1">- McFlurry Praliné! Irresistible chocolate con barquillo de helado y cremoso praliné.
    - McFlurry Caramel and Cookies! Déjate envolver por esta fusión de crujiente galleta caramelizada. ¿Se te hace la boca agua? ¡Vamos! Deja de imaginarlo y ven a probarlo.
    - Añade Kit Kat a tu McFlurry y disfruta de ese delicioso momento. Con sirope de chocolate, caramelo o fresa, ¡todas son buenas opciones!.
    - Qué mejor forma de darle color a tu día que disfrutar de un delicioso McFlurry con MM. Combínalo con sirope de chocolate, caramelo o fresa, a tu gusto.
    </string>
    <string name="infoflurry">- McFlurry Oreo! Lo mejor que le podía pasar a tu galleta favorita era ¡poder disfrutarla con tu McFlurry!. Complétalo con sirope de chocolate, caramelo o fresa.
    </string>
    <string name="mcflurryfinal">*Los helados pueden variar dependiendo de la oferta de cada restaurante.</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
