<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context="practica3.gabrielosorio.com.practica3actividades.LogginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_width="170dp"
            android:layout_height="170dp"
            android:src="@drawable/logo2"
            android:layout_gravity="center"
            />
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/eUsuario"
            android:hint="@string/usuario"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_gravity="center"
            android:inputType="text"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>
        <EditText
            android:layout_width="300dp"
            android:layout_height="40dp"
            android:id="@+id/eContrasena"
            android:hint="@string/contrasena"
            android:inputType="textPassword"
            android:textColor="@color/black"
            android:background="@color/white"
            android:layout_gravity="center"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/bEntrar"
            android:text="@string/entrar"
            android:background="@color/mcboton"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="5dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:id="@+id/bRegistro"
            android:text="@string/registro"
            android:background="@color/mcboton"/>

    </LinearLayout>
</ScrollView>
