<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mcdonalds"
    tools:context="practica3.gabrielosorio.com.practica3actividades.McmenuFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="El McMENÚ contiene:"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="20sp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infomcmenu1"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                android:src="@drawable/pmcmenu1"
                android:layout_gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/infomcmenu"
                android:gravity="center"
                android:textColor="@color/white"
                android:textSize="15sp"/>
            </LinearLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="10dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mcmenufinal"
                android:gravity="left"
                android:textColor="@color/white"
                android:textSize="12sp"/>
        </LinearLayout>

    </ScrollView>

</FrameLayout>
